# compflask

./: .gitignore  .pre-commit-config.yaml  README.rst  config.py  pyproject.toml  run.py
app/: __init__.py
app/auth/: controllers.py  forms.py  models.py
app/pages/: controllers.py
app/templates/: 404.html  base.html  footer.html
app/templates/auth/: login.html  register.html
app/templates/menu/: main_menu.html
app/templates/page/: index.html  profile.html
tests/: test_compflask.py  test_comptools.py
