[tool.poetry]
name = "compflask"
version = "0.1.0"
description = "A Flask app for compliance tasks."
authors = ["Tom Camp <tom.camp@civicactions.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
WTForms = {extras = ["email"], version = "^2.3.3"}
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.4.4"
Flask-WTF = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
